--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -26,7 +26,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Install Additional packages
-      run: sudo apt-get install libhunspell-dev libmagick++-6.q16-dev graphviz libluajit-5.1-dev doxygen gcc-7 g++-7
+      run: apt-get install libhunspell-dev libmagick++-6.q16-dev graphviz libluajit-5.1-dev doxygen gcc-7 g++-7
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
@@ -55,13 +55,13 @@ jobs:
       # Execute the build.  You can specify a specific target with "--target <NAME>"
       run: make docs && make dark-docs
 
-    -name: Pack
-     working-directory: ${{runner.workspace}}/unified/Binaries
-     run: cmake -E tar cfv ../../${{ matrix.config.artifact }} --format=7zip .
+    - name: Pack
+      working-directory: ${{runner.workspace}}/unified/Binaries
+      run: cmake -E tar cfv ../../${{ matrix.config.artifact }} --format=7zip .
 
-   - name: Upload
-     uses: actions/upload-artifact@v1
-     with:
+    - name: Upload
+      uses: actions/upload-artifact@v1
+      with:
        path: ./${{ matrix.config.artifact }}
        name: ${{ matrix.config.artifact }}
 
