--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -16,7 +16,7 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - {
+        - {
             name: "Ubuntu GCC 7", artifact: "NWNX-EE.7z",
             os: ubuntu-latest,
             cc: "gcc-7", cxx: "g++-7"
@@ -26,7 +26,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Install Additional packages
-      run: apt-get install libhunspell-dev libmagick++-6.q16-dev graphviz libluajit-5.1-dev doxygen gcc-7 g++-7
+      run: sudo apt-get install libhunspell-dev libmagick++-6.q16-dev graphviz libluajit-5.1-dev doxygen gcc-7 g++-7
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
