--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -25,7 +25,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Install Additional packages
-      run: sudo apt-get install libhunspell-dev libmagick++-6.q16-dev graphviz libluajit-5.1-dev doxygen gcc-7 g++-7
+      run: sudo apt-get install libhunspell-dev libmagick++-6.q16-dev graphviz libluajit-5.1-dev doxygen
 
     - name: Create Build Environment
       run: cmake -E make_directory ${{runner.workspace}}/build
@@ -43,7 +43,7 @@ jobs:
     - name: Make Docs
       working-directory: ${{runner.workspace}}/build
       shell: bash
-      run: make docs && make dark-docs && mv ../Documentation/dark ../Documentation/light/
+      run: make docs && make dark-docs
 
     - name: Move Dark Docs into Light for GH-Pages
       working-directory: ${{runner.workspace}}/unified/Documentation
