--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -69,7 +69,7 @@ jobs:
 
   release:
     if: contains(github.ref, 'tags/v')
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     needs: build
 
     steps:
@@ -89,9 +89,9 @@ jobs:
           echo "${{ steps.create_release.outputs.upload_url }}" > ./upload_url
 
       - uses: actions/upload-artifact@v1
-          with:
-            path: ./upload_url
-            name: upload_url
+        with:
+          path: ./upload_url
+          name: upload_url
 
   publish:
     if: contains(github.ref, 'tags/v')
