--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -81,7 +81,7 @@ jobs:
        CLEAN: true # Automatically remove deleted files from the deploy branch
 
     - name: Deploy Prerelease
-    - uses: "marvinpinto/action-automatic-releases@latest"
+      uses: "marvinpinto/action-automatic-releases@latest"
       with:
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
         automatic_release_tag: "latest"
