--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -76,16 +76,16 @@ jobs:
       uses: JamesIves/github-pages-deploy-action@3.7.1
       with:
        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-       BRANCH: gh-pages # The branch the action should deploy to.
-       FOLDER: Documentation/light # The folder the action should deploy.
-       CLEAN: true # Automatically remove deleted files from the deploy branch
+       BRANCH: gh-pages
+       FOLDER: Documentation/light
+       CLEAN: true
 
     - name: Deploy Prerelease
       uses: "marvinpinto/action-automatic-releases@latest"
       with:
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
         automatic_release_tag: "latest"
-        prerelease: true
+        prerelease: false
         title: "Development Build"
         files: |
            ./${{ matrix.config.binaries }}
