--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -92,7 +92,7 @@ jobs:
            ./${{ matrix.config.scripts }}
 
   release:
-    if: contains(github.ref, 'tags/v')
+    if: contains(github.ref, 'tags/build')
     runs-on: ubuntu-latest
     needs: build
 
@@ -118,7 +118,7 @@ jobs:
           name: upload_url
 
   publish:
-    if: contains(github.ref, 'tags/v')
+    if: contains(github.ref, 'tags/build')
     name: ${{ matrix.config.name }}
     runs-on: ${{ matrix.config.os }}
     strategy:
