--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -114,7 +114,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: ./
-        file: ./Dockerfile
+        file: ./Dockerfile-gha
         builder: ${{ steps.bldnwnx.outputs.name }}
         push: true
         tags: plenarius/unified:${{ steps.vars.outputs.sha_short }}
