--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -91,41 +91,48 @@ jobs:
            ./NWNX-EE.zip
            ./NWScript.zip
 
-    - name: Set up Docker bldnwnx
-      id: bldnwnx
-      uses: docker/setup-buildx-action@master
+  docker:
+    runs-on: ubuntu-20.04
+    needs: build
+    steps:
+      - uses: actions/checkout@v2
+  
+      - name: Set up Docker bldnwnx
+        id: bldnwnx
+        uses: docker/setup-buildx-action@master
 
-    - name: Cache Docker layers
-      uses: actions/cache@v2
-      with:
-        path: /tmp/.bldnwnx-cache
-        key: ${{ runner.os }}-bldnwnx-${{ github.sha }}
-        restore-keys: |
-          ${{ runner.os }}-bldnwnx-
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.bldnwnx-cache
+          key: ${{ runner.os }}-bldnwnx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-bldnwnx-
 
-    - name: Login to DockerHub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKER_HUB_USERNAME }}
-        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-    - name: Build and push
-      id: docker_build
-      uses: docker/build-push-action@v2
-      with:
-        context: ./
-        file: ./Dockerfile-gha
-        builder: ${{ steps.bldnwnx.outputs.name }}
-        push: true
-        tags: plenarius/unified:${{ steps.vars.outputs.sha_short }}
-        cache-from: type=local,src=/tmp/.bldnwnx-cache
-        cache-to: type=local,dest=/tmp/.bldnwnx-cache
-        build-args: |
-          CC=gcc-7
-          CXX=g++-7
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: ./
+          file: ./Dockerfile-gha
+          builder: ${{ steps.bldnwnx.outputs.name }}
+          push: true
+          tags: plenarius/unified:${{ steps.vars.outputs.sha_short }}
+          cache-from: type=local,src=/tmp/.bldnwnx-cache
+          cache-to: type=local,dest=/tmp/.bldnwnx-cache
+          build-args: |
+            CC=gcc-7
+            CXX=g++-7
 
-    - name: Image digest
-      run: echo ${{ steps.docker_build.outputs.digest }}
+       - name: Image digest
+         run: echo ${{ steps.docker_build.outputs.digest }}
+
 
   release:
     if: contains(github.ref, 'tags/build')
