--- a/Dockerfile-gha
+++ b/Dockerfile-gha
@@ -11,7 +11,7 @@ RUN runDeps="hunspell \
     inotify-tools \
     patch \
     unzip \
-    dotnet-sdk-3.1" \
+    dotnet-runtime-3.1" \
     installDeps="ca-certificates wget gpg apt-transport-https" \
     && apt-get update \
     && apt-get install -y --no-install-recommends $installDeps \
@@ -24,14 +24,12 @@ RUN runDeps="hunspell \
     && rm -r /var/cache/apt /var/lib/apt/lists
 
 RUN mkdir -p /nwn/nwnx
-WORKDIR /nwn/nwnx
 RUN wget https://github.com/plenarius/unified/releases/download/latest/NWNX-EE.zip
-RUN unzip NWNX-EE.zip
+RUN unzip NWNX-EE.zip && rm NWNX-EE.zip && mv *.so *.txt /nwnx/nwnx
 RUN ls -al
 
 # Patch run-server.sh with our modifications
-WORKDIR /nwn
-RUN wget https://github.com/plenarius/unified/Scripts/Docker/run-server.patch
+COPY ./Scripts/Docker/run-server.patch /nwn
 RUN patch /nwn/run-server.sh < /nwn/run-server.patch
 
 # Configure nwserver to run with nwnx
