--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -97,6 +97,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Set outputs
+        id: vars
+        run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
+
       - name: Set up Docker bldnwnx
         id: bldnwnx
         uses: docker/setup-buildx-action@master
