--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -1,6 +1,6 @@
 name: CMake
 
-on: [push]
+on: [push, pull_request]
 
 env:
   BUILD_TYPE: RelWithDebInfo
@@ -101,18 +101,6 @@ jobs:
         id: vars
         run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
 
-      - name: Set up Docker bldnwnx
-        id: bldnwnx
-        uses: docker/setup-buildx-action@master
-
-      - name: Cache Docker layers
-        uses: actions/cache@v2
-        with:
-          path: /tmp/.bldnwnx-cache
-          key: ${{ runner.os }}-bldnwnx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-bldnwnx-
-
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
@@ -125,14 +113,8 @@ jobs:
         with:
           context: ./
           file: ./Dockerfile-gha
-          builder: ${{ steps.bldnwnx.outputs.name }}
           push: true
           tags: plenarius/unified:${{ steps.vars.outputs.sha_short }}
-          cache-from: type=local,src=/tmp/.bldnwnx-cache
-          cache-to: type=local,dest=/tmp/.bldnwnx-cache
-          build-args: |
-            CC=gcc-7
-            CXX=g++-7
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
