--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -21,8 +21,26 @@ jobs:
       uses: 1466587594/get-current-time@v2
       id: current-time
 
-    - name: Install Additional packages
-      run: sudo apt-get install libhunspell-dev libluajit-5.1-dev doxygen
+    - name: Cache Additional Dependencies
+      uses: actions/cache@v2
+      id: dependencies-cache
+      with:
+        path: "~/dependencies"
+        key: dependencies-1
+
+    - name: Install Cache Additional Dependencies
+      env:
+        CACHE_HIT: ${{steps.dependencies-cache.outputs.cache-hit}}
+      run: |
+        if [[ "$CACHE_HIT" == 'true' ]]; then
+          sudo cp --force --recursive ~/dependencies/* /
+        else
+          sudo apt-get install libhunspell-dev libluajit-5.1-dev
+          mkdir -p ~/dependencies
+          for dep in libhunspell-dev libluajit-5.1-dev; do
+              dpkg -L $dep | while IFS= read -r f; do if test -f $f; then echo $f; fi; done | xargs cp --parents --target-directory ~/dependencies/
+          done
+        fi
 
     - name: Create Build Environment
       run: cmake -E make_directory ${{runner.workspace}}/build
@@ -35,17 +53,7 @@ jobs:
     - name: Build
       working-directory: ${{runner.workspace}}/build
       shell: bash
-      run: cmake --build . --config $BUILD_TYPE -- -j 6
-
-    - name: Generate Documentation
-      working-directory: ${{runner.workspace}}/build
-      shell: bash
-      run: make docs && make dark-docs
-
-    - name: Move Dark Docs into Proper Location
-      working-directory: ${{runner.workspace}}/unified/Documentation
-      shell: bash
-      run: mv dark light/
+      run: cmake --build . --config $BUILD_TYPE -- -j 4
 
     - name: Drop timestamp into Binaries folder
       working-directory: ${{runner.workspace}}/unified/Binaries
@@ -71,14 +79,6 @@ jobs:
       with:
         path: ./NWScript.zip
         name: NWScript.zip
-
-    - name: Deploy Documents to Github Pages
-      uses: JamesIves/github-pages-deploy-action@3.7.1
-      with:
-       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-       BRANCH: gh-pages
-       FOLDER: Documentation/light
-       CLEAN: true
 
     - name: Deploy Latest Development Build
       uses: "marvinpinto/action-automatic-releases@latest"
