--- a/Dockerfile-gha
+++ b/Dockerfile-gha
@@ -32,7 +32,8 @@ COPY ./Scripts/Docker/run-server.patch /nwn
 RUN patch /nwn/run-server.sh < /nwn/run-server.patch
 
 # Remove unneeded packages
-RUN apt-get remove --purge ca-certificates wget gpg apt-transport-https unzip patch
+RUN apt-get -y remove --purge wget gpg apt-transport-https unzip patch
+RUN apt-get -y autoremove
 RUN rm -r /var/cache/apt /var/lib/apt/lists
 
 # Configure nwserver to run with nwnx
