--- a/Dockerfile-gha
+++ b/Dockerfile-gha
@@ -31,6 +31,7 @@ COPY ./Scripts/Docker/run-server.patch /nwn
 RUN patch /nwn/run-server.sh < /nwn/run-server.patch
 
 # Remove unneeded packages
+RUN apt-get -y upgrade
 RUN apt-get -y remove --purge wget gpg apt-transport-https unzip patch
 RUN apt-get -y autoremove
 RUN apt-get clean
