--- a/.github/workflows/trivy-analysis.yml
+++ b/.github/workflows/trivy-analysis.yml
@@ -13,7 +13,7 @@ jobs:
 
       - name: Build an image from Dockerfile
         run: |
-          docker --file ./Dockerfile-gha build -t docker.io/my-organization/my-app:${{ github.sha }} .
+          docker build -t docker.io/my-organization/my-app:${{ github.sha }} --file ./Dockerfile-gha .
 
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
