--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -6,6 +6,11 @@ env:
   BUILD_TYPE: RelWithDebInfo
   CC: ccache gcc-7 -m64
   CXX: ccache g++-7 -m64
+  CCACHE_BASEDIR: $ENV{GITHUB_WORKSPACE}
+  CCACHE_DIR: $ENV{GITHUB_WORKSPACE}/.ccache
+  CCACHE_COMPRESS: true
+  CCACHE_COMPRESSLEVE: 6
+  CCACHE_MAXSIZE: 400M
 
 jobs:
   build:
@@ -69,17 +74,7 @@ jobs:
       working-directory: ${{runner.workspace}}/build
       shell: bash
       run: |
-        set(ENV{CCACHE_BASEDIR} "$ENV{GITHUB_WORKSPACE}")
-        set(ENV{CCACHE_DIR} "${ccache_basedir}/.ccache")
-        set(ENV{CCACHE_COMPRESS} "true")
-        set(ENV{CCACHE_COMPRESSLEVEL} "6")
-        set(ENV{CCACHE_MAXSIZE} "400M")
-        execute_process(COMMAND ccache -p)
-        execute_process(COMMAND ccache -z)
-
-        execute_process(cmake --build . --config $BUILD_TYPE -- -j 4)
-
-        execute_process(COMMAND ccache -s)
+        ccache -p && ccache -z && cmake --build . --config $BUILD_TYPE -- -j 4 && ccache -s
 
     - name: Drop timestamp into Binaries folder
       working-directory: ${{runner.workspace}}/unified/Binaries
