--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -49,6 +49,7 @@ jobs:
       id: ccache_cache_timestamp
       shell: cmake -P {0}
       run: |
+        sudo /usr/sbin/update-ccache-symlinks
         string(TIMESTAMP current_date "%Y-%m-%d-%H;%M;%S" UTC)
         message("::set-output name=timestamp::${current_date}")
 
@@ -66,13 +67,13 @@ jobs:
     - name: Configure CMake
       shell: bash
       working-directory: ${{runner.workspace}}/build
-      run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DCMAKE_C_COMPILER_LAUNCHER="ccache gcc-7" -DCMAKE_CXX_COMPILER_LAUNCHER="ccache g++-7"
+      run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE
 
     - name: Build
       working-directory: ${{runner.workspace}}/build
       shell: bash
       run: |
-        cmake --build . --config $BUILD_TYPE -- -j 4
+        export PATH="/usr/lib/ccache:$PATH" && cmake --build . --config $BUILD_TYPE -- -j 4
 
     - name: Drop timestamp into Binaries folder
       working-directory: ${{runner.workspace}}/unified/Binaries
