--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -4,11 +4,8 @@ on: [push, pull_request]
 
 env:
   BUILD_TYPE: RelWithDebInfo
-  CCACHE_BASEDIR: $ENV{GITHUB_WORKSPACE}
-  CCACHE_DIR: $ENV{GITHUB_WORKSPACE}/.ccache
-  CCACHE_COMPRESS: true
-  CCACHE_COMPRESSLEVE: 6
-  CCACHE_MAXSIZE: 400M
+  CC: gcc-7 -m64
+  CXX: g++-7 -m64
 
 jobs:
   build:
@@ -41,7 +38,7 @@ jobs:
         else
           sudo apt-get install libhunspell-dev libluajit-5.1-dev ccache
           mkdir -p ~/dependencies
-          for dep in libhunspell-dev libluajit-5.1-dev; do
+          for dep in libhunspell-dev libluajit-5.1-dev ccache; do
               dpkg -L $dep | while IFS= read -r f; do if test -f $f; then echo $f; fi; done | xargs cp --parents --target-directory ~/dependencies/
           done
         fi
@@ -65,14 +62,48 @@ jobs:
       run: sudo /usr/sbin/update-ccache-symlinks && cmake -E make_directory ${{runner.workspace}}/build
 
     - name: Configure CMake
-      shell: bash
-      working-directory: ${{runner.workspace}}/build
-      run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE
+      shell: cmake -P {0}
+      run: |
+        set(path_separator ":")
+        set(ENV{PATH} "$ENV{GITHUB_WORKSPACE}${path_separator}$ENV{PATH}")
+        execute_process(
+          COMMAND cmake
+            -S .
+            -B build
+            -D CMAKE_BUILD_TYPE=$ENV{BUILD_TYPE}
+            -D CMAKE_C_COMPILER_LAUNCHER=ccache
+            -D CMAKE_CXX_COMPILER_LAUNCHER=ccache
+          RESULT_VARIABLE result
+        )
+        if (NOT result EQUAL 0)
+          message(FATAL_ERROR "Bad exit status")
+        endif()
 
     - name: Build
-      working-directory: ${{runner.workspace}}/build
-      shell: bash
-      run: cmake --build . --config $BUILD_TYPE -- -j 4
+      shell: cmake -P {0}
+      run: |
+        file(TO_CMAKE_PATH "$ENV{GITHUB_WORKSPACE}" ccache_basedir)
+        set(ENV{CCACHE_BASEDIR} "${ccache_basedir}")
+        set(ENV{CCACHE_DIR} "${ccache_basedir}/.ccache")
+        set(ENV{CCACHE_COMPRESS} "true")
+        set(ENV{CCACHE_COMPRESSLEVEL} "6")
+        set(ENV{CCACHE_MAXSIZE} "400M")
+        execute_process(COMMAND ccache -p)
+        execute_process(COMMAND ccache -z)
+        execute_process(
+          COMMAND cmake --build build
+          RESULT_VARIABLE result
+          OUTPUT_VARIABLE output
+          ERROR_VARIABLE output
+          ECHO_OUTPUT_VARIABLE ECHO_ERROR_VARIABLE
+        )
+        if (NOT result EQUAL 0)
+          string(REGEX MATCH "FAILED:.*$" error_message "${output}")
+          string(REPLACE "\n" "%0A" error_message "${error_message}")
+          message("::error::${error_message}")
+          message(FATAL_ERROR "Build failed")
+        endif()
+        execute_process(COMMAND ccache -s)
 
     - name: Drop timestamp into Binaries folder
       working-directory: ${{runner.workspace}}/unified/Binaries
