--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -18,9 +18,6 @@ jobs:
       run: |
           echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
           echo "/usr/lib/ccache" >> $GITHUB_PATH
-    - name: Get current time
-      uses: 1466587594/get-current-time@v2
-      id: current-time
 
     - name: Cache Additional Dependencies
       uses: actions/cache@v2
@@ -101,7 +98,7 @@ jobs:
 
     - name: Drop timestamp into Binaries folder
       working-directory: ${{runner.workspace}}/unified/Binaries
-      run: echo "${{ steps.current-time.outputs.readableTime }}" > ${{ steps.vars.outputs.sha_short }}.txt
+      run: echo "${{ steps.ccache_cache_timestamp.outputs.timestamp }}" > ${{ steps.vars.outputs.sha_short }}.txt
 
     - name: Pack the Binaries
       working-directory: ${{runner.workspace}}/unified/Binaries
