--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -132,6 +132,15 @@ jobs:
            ./NWNX-EE.zip
            ./NWScript.zip
 
+    - uses: sarisia/actions-status-discord@v1
+      with:
+        webhook: ${{ secrets.DISCORD_WEBHOOK }}
+        nodetail: true
+        title: New binaries of NWNX:EE have been built.
+        description: |
+          Commit `${{ steps.vars.outputs.sha_short }}`
+          Click [here](https://github.com/plenarius/unified/releases/tag/latest) to download.
+
   docker:
     runs-on: ubuntu-20.04
     needs: build
