--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -15,9 +15,15 @@ name: "CodeQL"
 on:
   push:
     branches: [ master ]
+    paths:
+      - '**.cpp'
+      - '**.hpp'
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ master ]
+    paths:
+      - '**.cpp'
+      - '**.hpp'
   schedule:
     - cron: '31 8 * * 3'
 
